# rust-basics

./: .gitignore  README.md
control_flow/: Cargo.toml
control_flow/src/: main.rs
data_types/: Cargo.toml
data_types/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
proj_one/: Cargo.toml
references_and_borrowing/: Cargo.toml
references_and_borrowing/src/: main.rs
slice_type/: Cargo.toml
slice_type/src/: main.rs
struct_example/: Cargo.toml
struct_example/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
