# To build a Rust project using Cargo (dev): $ cargo build
# To build a Rust project using Cargo (release): $ cargo build --release    -> This command will compile the code with optimizations
# To build and run a Rust project using Cargo: $ cargo run
# To check if a program compiles: $ cargo check     -> This command will not generate an executable

[package]
name = "proj_one"
version = "0.1.0"
authors = ["kashifulhaque <haque.kashiful7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
